
CHANGES
==============

1.3.51
-------

    - postgresql maintenance and doc/UI improvment
    - plone3 refactoring

        - better separation between buildout logic and semantic
        - fix buildout part ordering

    - add --reload option for the pasteinitd profile
    - pgsql 8.4 support
    - zope3 python version upgraded
    - add openldap profile
    - add mysql profile
    - fix on postgresql template for database initialization
    - plone3 fix for offline run
    - add running_user/dbuser distinction in the postgresql profile.
    - move some scripts for global coherence
    - mysqld init script portable
    - db_user is also owner of the created database
    - profils -> instances
    - openldap got better arguements for its wrappers. Also, now it uses
      SIMPLE authentication for connection to the slapd server.
    - add SSL certificate generators
    - fix plone.reload version for compatibility with plone3
    - wrong dependency on pyopenssl fixed and moved inside .extras
    - remove special chars from default database name for postgresql instance
    - add entries for ipv6 connections for postgresql instance
    - Change PATH priorities in .env (minitage come in last, just before
      system PATH
    - make python2.4 at highest priority on plone3 template
    - make direct dependencies at higher priority in minitage.instances.env
    - up to plone 3.3 RELEASE


1.3
----

        - fix failed merge

1.2
-------

    - remove some useless variables on pgsql templates
    - fix django url

1.1
-------

    - PloneArticle fix

1.0
------

    - Only the django, zope3, plone3, plone25, pylons templates remains
    - paste-initd is a now comer
    - all templates have now an optionnal support for minitage
    - its stabilized with other minitage components
    - templates are all documented on http://www.minitage.org

0.22
------

    - Renew plone3 template, desacticate deprecated ones.

0.20->0.21
-----------

    - Fix in pgsql

0.19
-------
