@@ -11,7 +11,7 @@ eggs-directory=../../eggs/cache
 location=\${buildout:directory}/../../dependencies/anotherDep-ver/parts/part
 
 [part]
-recipe = minitage.recipe:cmmi
+recipe = minitage.recipe.cmmi
 
 #
 # URL & MD5
