@@ -65,7 +65,7 @@ extra-paths=
     \${libxslt:site-packages}
 
 [minitageeggs]
-recipe = minitage.recipe:scripts
+recipe = minitage.recipe.scripts
 extra-paths=\${buildout:extra-paths}
 eggs =
     \${buildout:eggs}
