@@ -2,6 +2,13 @@
 CHANGES
 ==============
 
+-> UP
+-------
+
+    * add support for installing Quills, the plone Blog suite.
+    * fix plone3 default buildout code
+    * switch recipe names to new minitage.recipe recipes
+
 1.3.51
 -------
 
